--- a/FraudDetection/Credit Card Fraud Detection.ipynb
+++ b/FraudDetection/Credit Card Fraud Detection.ipynb
@@ -2,13 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
    "source": [
     "import h5py\n",
     "import pandas as pd\n",
     "import numpy as np\n",
+    "np.random.seed(1)\n",
+    "\n",
     "import matplotlib.pyplot as plt\n",
     "import matplotlib.gridspec as gridspec\n",
     "import seaborn as sns\n",
