Add oversampling in modelling.

--- a/FraudDetection/Modeling.ipynb
+++ b/FraudDetection/Modeling.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,9 @@
     "from keras import backend as K\n",
     "from keras.models import Sequential, load_model, optimizers\n",
     "from keras.layers import Dense, Activation, Dropout\n",
-    "from keras.callbacks import EarlyStopping"
+    "from keras.callbacks import EarlyStopping\n",
+    "from __future__ import division\n",
+    "from imblearn.over_sampling import SMOTE"
    ]
   },
   {
@@ -54,7 +56,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "for train_index, test_index in sss.split(X, y):\n",
@@ -65,7 +69,9 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def network_1(X_train):\n",
@@ -113,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 42,
    "metadata": {
     "collapsed": true
    },
@@ -250,9 +256,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Undersample"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 108,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "fraudulent = data[data.Class == 1]\n",
@@ -262,7 +277,9 @@
   {
    "cell_type": "code",
    "execution_count": 109,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "normal_sample = normal.sample(fraudulent.Class.count(), random_state=0)"
@@ -271,7 +288,9 @@
   {
    "cell_type": "code",
    "execution_count": 110,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "data_undersample = pd.concat([fraudulent, normal_sample])"
@@ -527,6 +546,422 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### Oversample"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fraudulent = data[data.Class == 1]\n",
+    "normal = data[data.Class == 0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(492, 284315)"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fraudulent.Class.count(), normal.Class.count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "577.8760162601626"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "normal.Class.count() / fraudulent.Class.count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fraudulent_oversample = pd.concat([fraudulent]*578, ignore_index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "284376"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fraudulent_oversample.Class.count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "data_oversample = pd.concat([fraudulent_oversample, normal])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1    0.500054\n",
+       "0    0.499946\n",
+       "Name: Class, dtype: float64"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_oversample.Class.value_counts(normalize=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "X, y = data_oversample[data_oversample.columns[1:29]].values, data_oversample.Class.values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "sss = StratifiedShuffleSplit(n_splits=1, test_size=0.5, random_state=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "for train_index, test_index in sss.split(X, y):\n",
+    "    X_train, X_test = X[train_index], X[test_index]\n",
+    "    y_train, y_test = y[train_index], y[test_index]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def network_4(X_train):\n",
+    "    model = Sequential()\n",
+    "    model.add(Dense(64, activation=\"sigmoid\", input_dim=X_train.shape[1]))\n",
+    "    model.add(Dense(32, activation=\"sigmoid\"))\n",
+    "    model.add(Dense(1, activation=\"sigmoid\"))\n",
+    "    model.compile(optimizer=\"rmsprop\",\n",
+    "                  loss=\"binary_crossentropy\",\n",
+    "                  metrics=[\"accuracy\"])\n",
+    "    early_stopping = EarlyStopping(monitor=\"loss\", patience=4)\n",
+    "    model.fit(X_train, y_train, epochs=20, batch_size=32, callbacks=[early_stopping], verbose=1)\n",
+    "    return model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/20\n",
+      "284345/284345 [==============================] - 15s - loss: 0.1015 - acc: 0.9612    \n",
+      "Epoch 2/20\n",
+      "284345/284345 [==============================] - 15s - loss: 0.0301 - acc: 0.9907    \n",
+      "Epoch 3/20\n",
+      "284345/284345 [==============================] - 13s - loss: 0.0142 - acc: 0.9965    \n",
+      "Epoch 4/20\n",
+      "284345/284345 [==============================] - 13s - loss: 0.0126 - acc: 0.9971    \n",
+      "Epoch 5/20\n",
+      "284345/284345 [==============================] - 13s - loss: 0.0119 - acc: 0.9974    \n",
+      "Epoch 6/20\n",
+      "284345/284345 [==============================] - 13s - loss: 0.0119 - acc: 0.9975    \n",
+      "Epoch 7/20\n",
+      "284345/284345 [==============================] - 13s - loss: 0.0115 - acc: 0.9976    \n",
+      "Epoch 8/20\n",
+      "284345/284345 [==============================] - 14s - loss: 0.0109 - acc: 0.9977    \n",
+      "Epoch 9/20\n",
+      "284345/284345 [==============================] - 13s - loss: 0.0102 - acc: 0.9977    \n",
+      "Epoch 10/20\n",
+      "284345/284345 [==============================] - 13s - loss: 0.0100 - acc: 0.9977    \n",
+      "Epoch 11/20\n",
+      "284345/284345 [==============================] - 13s - loss: 0.0099 - acc: 0.9977    \n",
+      "Epoch 12/20\n",
+      "284345/284345 [==============================] - 13s - loss: 0.0107 - acc: 0.9974    \n",
+      "Epoch 13/20\n",
+      "284345/284345 [==============================] - 13s - loss: 0.0106 - acc: 0.9975    \n",
+      "Epoch 14/20\n",
+      "284345/284345 [==============================] - 13s - loss: 0.0099 - acc: 0.9977    \n",
+      "Epoch 15/20\n",
+      "284345/284345 [==============================] - 12s - loss: 0.0093 - acc: 0.9978    \n",
+      "Epoch 16/20\n",
+      "284345/284345 [==============================] - 12s - loss: 0.0093 - acc: 0.9977    \n",
+      "Epoch 17/20\n",
+      "284345/284345 [==============================] - 12s - loss: 0.0087 - acc: 0.9978    \n",
+      "Epoch 18/20\n",
+      "284345/284345 [==============================] - 12s - loss: 0.0081 - acc: 0.9979    \n",
+      "Epoch 19/20\n",
+      "284345/284345 [==============================] - 14s - loss: 0.0077 - acc: 0.9981    \n",
+      "Epoch 20/20\n",
+      "284345/284345 [==============================] - 14s - loss: 0.0072 - acc: 0.9981    \n"
+     ]
+    }
+   ],
+   "source": [
+    "model_4 = network_4(X_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "281152/284346 [============================>.] - ETA: 0s(0.99822047786851231, 0.99645395041136975, 1.0)\n"
+     ]
+    }
+   ],
+   "source": [
+    "y_test_pred = model_4.predict_classes(X_test)\n",
+    "network_4 = evaluation(y_test, y_test_pred)\n",
+    "print(network_4)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### SMOTE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "sm = SMOTE(random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "X, y = data[data.columns[1:29]].values, data.Class.values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "X_res, y_res = sm.fit_sample(X, y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1    284315\n",
+       "0    284315\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.Series(y_res).value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "sss = StratifiedShuffleSplit(n_splits=1, test_size=0.5, random_state=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "for train_index, test_index in sss.split(X_res, y_res):\n",
+    "    X_train, X_test = X_res[train_index], X_res[test_index]\n",
+    "    y_train, y_test = y_res[train_index], y_res[test_index]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def network_5(X_train):\n",
+    "    model = Sequential()\n",
+    "    model.add(Dense(64, activation=\"sigmoid\", input_dim=X_train.shape[1]))\n",
+    "    model.add(Dense(32, activation=\"sigmoid\"))\n",
+    "    model.add(Dense(1, activation=\"sigmoid\"))\n",
+    "    model.compile(optimizer=\"rmsprop\",\n",
+    "                  loss=\"binary_crossentropy\",\n",
+    "                  metrics=[\"accuracy\"])\n",
+    "    early_stopping = EarlyStopping(monitor=\"loss\", patience=4)\n",
+    "    model.fit(X_train, y_train, epochs=20, batch_size=32, callbacks=[early_stopping], verbose=1)\n",
+    "    return model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/20\n",
+      "284315/284315 [==============================] - 15s - loss: 0.0970 - acc: 0.9618    \n",
+      "Epoch 2/20\n",
+      "284315/284315 [==============================] - 14s - loss: 0.0297 - acc: 0.9901    \n",
+      "Epoch 3/20\n",
+      "284315/284315 [==============================] - 14s - loss: 0.0145 - acc: 0.9961    \n",
+      "Epoch 4/20\n",
+      "284315/284315 [==============================] - 16s - loss: 0.0119 - acc: 0.9969    \n",
+      "Epoch 5/20\n",
+      "284315/284315 [==============================] - 13s - loss: 0.0111 - acc: 0.9972    \n",
+      "Epoch 6/20\n",
+      "284315/284315 [==============================] - 13s - loss: 0.0108 - acc: 0.9974    \n",
+      "Epoch 7/20\n",
+      "284315/284315 [==============================] - 14s - loss: 0.0105 - acc: 0.9974    \n",
+      "Epoch 8/20\n",
+      "284315/284315 [==============================] - 15s - loss: 0.0106 - acc: 0.9974    \n",
+      "Epoch 9/20\n",
+      "284315/284315 [==============================] - 13s - loss: 0.0106 - acc: 0.9974    \n",
+      "Epoch 10/20\n",
+      "284315/284315 [==============================] - 14s - loss: 0.0106 - acc: 0.9974    \n",
+      "Epoch 11/20\n",
+      "284315/284315 [==============================] - 13s - loss: 0.0109 - acc: 0.9973    \n",
+      "Epoch 12/20\n",
+      "284315/284315 [==============================] - 14s - loss: 0.0106 - acc: 0.9973    \n"
+     ]
+    }
+   ],
+   "source": [
+    "model_5 = network_5(X_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "282080/284315 [============================>.] - ETA: 0s(0.99747463201027031, 0.99619014208033674, 0.99876896670582527)\n"
+     ]
+    }
+   ],
+   "source": [
+    "y_test_pred = model_5.predict_classes(X_test)\n",
+    "network_5 = evaluation(y_test, y_test_pred)\n",
+    "print(network_5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Pre-trained weights\n",
     "- Train network on balanced dataset and save the model\n",
     "- Use the model as initial weights on imbalanced dataset"
@@ -570,7 +1005,9 @@
   {
    "cell_type": "code",
    "execution_count": 339,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "model = load_model(\"models/balance_model.h5\")"
@@ -686,7 +1123,9 @@
   {
    "cell_type": "code",
    "execution_count": 344,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "top_model = Sequential()\n",
@@ -697,7 +1136,9 @@
   {
    "cell_type": "code",
    "execution_count": 345,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "model.add(top_model)"
