Add additional model for credit card fraud detection and also add loss plot.

--- a/FraudDetection/Modeling.ipynb
+++ b/FraudDetection/Modeling.ipynb
@@ -2,15 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {},
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
     "np.random.seed(1)\n",
     "\n",
-    "from sklearn.model_selection import StratifiedShuffleSplit\n",
+    "from sklearn.model_selection import StratifiedShuffleSplit, ShuffleSplit\n",
     "from sklearn.metrics import accuracy_score, precision_score, recall_score\n",
     "from keras import backend as K\n",
     "from keras.models import Sequential, load_model, optimizers\n",
@@ -119,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 26,
    "metadata": {
     "collapsed": true
    },
@@ -552,7 +554,9 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "fraudulent = data[data.Class == 1]\n",
@@ -602,7 +606,9 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "fraudulent_oversample = pd.concat([fraudulent]*578, ignore_index=True)"
@@ -801,7 +807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -812,7 +818,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -823,7 +829,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -834,7 +840,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -845,7 +851,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -856,26 +862,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "sss = StratifiedShuffleSplit(n_splits=1, test_size=0.5, random_state=0)"
+    "rs = ShuffleSplit(n_splits=1, test_size=0.2, random_state=0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "for train_index, test_index in sss.split(X_res, y_res):\n",
+    "for train_index, test_index in rs.split(X_res, y_res):\n",
     "    X_train, X_test = X_res[train_index], X_res[test_index]\n",
     "    y_train, y_test = y_res[train_index], y_res[test_index]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((454904, 28), (113726, 28))"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train.shape, X_test.shape"
    ]
   },
   {
@@ -956,6 +982,115 @@
     "y_test_pred = model_5.predict_classes(X_test)\n",
     "network_5 = evaluation(y_test, y_test_pred)\n",
     "print(network_5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def network_6(X_train):\n",
+    "    model = Sequential()\n",
+    "    model.add(Dense(256, activation=\"sigmoid\", input_dim=X_train.shape[1]))\n",
+    "    model.add(Dense(128, activation=\"sigmoid\"))\n",
+    "    model.add(Dense(64, activation=\"sigmoid\"))\n",
+    "    model.add(Dense(32, activation=\"sigmoid\"))\n",
+    "    model.add(Dropout(0.5))\n",
+    "    model.add(Dense(1, activation=\"sigmoid\"))\n",
+    "    model.compile(optimizer=\"rmsprop\",\n",
+    "                  loss=\"binary_crossentropy\",\n",
+    "                  metrics=[\"accuracy\"])\n",
+    "    early_stopping = EarlyStopping(monitor=\"val_loss\", patience=4)\n",
+    "    model.fit(X_train, y_train, epochs=20, batch_size=32, validation_split=0.2, callbacks=[early_stopping], verbose=1)\n",
+    "    return model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train on 363923 samples, validate on 90981 samples\n",
+      "Epoch 1/20\n",
+      "363923/363923 [==============================] - 28s - loss: 0.1022 - acc: 0.9587 - val_loss: 0.0478 - val_acc: 0.9818\n",
+      "Epoch 2/20\n",
+      "363923/363923 [==============================] - 29s - loss: 0.0372 - acc: 0.9871 - val_loss: 0.0240 - val_acc: 0.9936\n",
+      "Epoch 3/20\n",
+      "363923/363923 [==============================] - 30s - loss: 0.0240 - acc: 0.9933 - val_loss: 0.0167 - val_acc: 0.9948\n",
+      "Epoch 4/20\n",
+      "363923/363923 [==============================] - 28s - loss: 0.0197 - acc: 0.9953 - val_loss: 0.0137 - val_acc: 0.9971\n",
+      "Epoch 5/20\n",
+      "363923/363923 [==============================] - 28s - loss: 0.0176 - acc: 0.9960 - val_loss: 0.0226 - val_acc: 0.9941\n",
+      "Epoch 6/20\n",
+      "363923/363923 [==============================] - 29s - loss: 0.0163 - acc: 0.9964 - val_loss: 0.0101 - val_acc: 0.9982\n",
+      "Epoch 7/20\n",
+      "363923/363923 [==============================] - 31s - loss: 0.0159 - acc: 0.9967 - val_loss: 0.0123 - val_acc: 0.9976\n",
+      "Epoch 8/20\n",
+      "363923/363923 [==============================] - 30s - loss: 0.0154 - acc: 0.9970 - val_loss: 0.0087 - val_acc: 0.9983\n",
+      "Epoch 9/20\n",
+      "363923/363923 [==============================] - 29s - loss: 0.0153 - acc: 0.9972 - val_loss: 0.0172 - val_acc: 0.9976\n",
+      "Epoch 10/20\n",
+      "363923/363923 [==============================] - 29s - loss: 0.0146 - acc: 0.9973 - val_loss: 0.0083 - val_acc: 0.9984\n",
+      "Epoch 11/20\n",
+      "363923/363923 [==============================] - 28s - loss: 0.0144 - acc: 0.9974 - val_loss: 0.0143 - val_acc: 0.9966\n",
+      "Epoch 12/20\n",
+      "363923/363923 [==============================] - 29s - loss: 0.0135 - acc: 0.9974 - val_loss: 0.0106 - val_acc: 0.9987\n",
+      "Epoch 13/20\n",
+      "363923/363923 [==============================] - 31s - loss: 0.0132 - acc: 0.9979 - val_loss: 0.0123 - val_acc: 0.9982\n",
+      "Epoch 14/20\n",
+      "363923/363923 [==============================] - 29s - loss: 0.0139 - acc: 0.9978 - val_loss: 0.0115 - val_acc: 0.9986\n",
+      "Epoch 15/20\n",
+      "363923/363923 [==============================] - 29s - loss: 0.0132 - acc: 0.9978 - val_loss: 0.0124 - val_acc: 0.9984\n"
+     ]
+    }
+   ],
+   "source": [
+    "model_6 = network_6(X_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "112832/113726 [============================>.] - ETA: 0s(0.99839086928231013, 0.9967998601031739, 1.0)\n"
+     ]
+    }
+   ],
+   "source": [
+    "y_test_pred = model_6.predict_classes(X_test)\n",
+    "network_6 = evaluation(y_test, y_test_pred)\n",
+    "print(network_6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "283328/284807 [============================>.] - ETA: 0s(0.99686805450708726, 0.3554913294797688, 1.0)\n"
+     ]
+    }
+   ],
+   "source": [
+    "y_full = model_6.predict_classes(X)\n",
+    "full_data = evaluation(y, y_full)\n",
+    "print(full_data)"
    ]
   },
   {
