--- a/Kaggle/Sberbank Russian Housing Market/data_review.ipynb
+++ b/Kaggle/Sberbank Russian Housing Market/data_review.ipynb
@@ -6714,7 +6714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 336,
+   "execution_count": 374,
    "metadata": {
     "collapsed": true
    },
@@ -6726,7 +6726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 337,
+   "execution_count": 375,
    "metadata": {
     "collapsed": false
    },
@@ -6737,7 +6737,7 @@
        "30471"
       ]
      },
-     "execution_count": 337,
+     "execution_count": 375,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6748,7 +6748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 338,
+   "execution_count": 376,
    "metadata": {
     "collapsed": false
    },
@@ -6824,11 +6824,6 @@
     "test.loc[test.build_year < 1000, \"build_year\"] = np.NaN\n",
     "test.loc[test.build_year > 2030, \"build_year\"] = np.NaN\n",
     "\n",
-    "## add label\n",
-    "train[\"label_value\"] = 0\n",
-    "train.loc[train[\"price_doc\"] == 1000000, \"label_value\"] = 1\n",
-    "train.loc[train[\"price_doc\"] == 2000000, \"label_value\"] = 2\n",
-    "\n",
     "## round up test\n",
     "test.full_sq = test.full_sq.round()\n",
     "test.life_sq = test.life_sq.round()"
@@ -6836,7 +6831,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 339,
+   "execution_count": 377,
    "metadata": {
     "collapsed": false
    },
@@ -6847,7 +6842,7 @@
        "28747"
       ]
      },
-     "execution_count": 339,
+     "execution_count": 377,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6858,7 +6853,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 340,
+   "execution_count": 378,
    "metadata": {
     "collapsed": false
    },
@@ -6866,18 +6861,18 @@
     {
      "data": {
       "text/plain": [
-       "count    28740.000000\n",
-       "mean        53.562804\n",
-       "std         21.115734\n",
-       "min          6.000000\n",
-       "25%         38.000000\n",
-       "50%         49.000000\n",
-       "75%         63.000000\n",
-       "max        388.000000\n",
+       "count    28744.00000\n",
+       "mean        53.61171\n",
+       "std         21.52224\n",
+       "min          6.00000\n",
+       "25%         38.00000\n",
+       "50%         49.00000\n",
+       "75%         63.00000\n",
+       "max        461.00000\n",
        "Name: full_sq, dtype: float64"
       ]
      },
-     "execution_count": 340,
+     "execution_count": 378,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6888,7 +6883,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 341,
+   "execution_count": 379,
    "metadata": {
     "collapsed": false
    },
@@ -6896,18 +6891,18 @@
     {
      "data": {
       "text/plain": [
-       "count    7658.000000\n",
-       "mean       53.643510\n",
-       "std        19.591088\n",
+       "count    7659.000000\n",
+       "mean       53.689124\n",
+       "std        19.992401\n",
        "min         2.000000\n",
        "25%        39.000000\n",
        "50%        50.000000\n",
        "75%        63.000000\n",
-       "max       314.000000\n",
+       "max       403.000000\n",
        "Name: full_sq, dtype: float64"
       ]
      },
-     "execution_count": 341,
+     "execution_count": 379,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6918,7 +6913,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 342,
+   "execution_count": 380,
    "metadata": {
     "collapsed": false
    },
@@ -6937,7 +6932,7 @@
        "Name: life_sq, dtype: float64"
       ]
      },
-     "execution_count": 342,
+     "execution_count": 380,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6948,7 +6943,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 345,
+   "execution_count": 381,
    "metadata": {
     "collapsed": false
    },
@@ -6967,7 +6962,7 @@
        "Name: life_sq, dtype: float64"
       ]
      },
-     "execution_count": 345,
+     "execution_count": 381,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6978,7 +6973,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 346,
+   "execution_count": 382,
    "metadata": {
     "collapsed": false
    },
@@ -6997,7 +6992,7 @@
        "Name: kitch_sq, dtype: float64"
       ]
      },
-     "execution_count": 346,
+     "execution_count": 382,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7008,7 +7003,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 347,
+   "execution_count": 383,
    "metadata": {
     "collapsed": false
    },
@@ -7027,7 +7022,7 @@
        "Name: kitch_sq, dtype: float64"
       ]
      },
-     "execution_count": 347,
+     "execution_count": 383,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7038,7 +7033,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 348,
+   "execution_count": 384,
    "metadata": {
     "collapsed": false
    },
@@ -7057,7 +7052,7 @@
        "Name: floor, dtype: float64"
       ]
      },
-     "execution_count": 348,
+     "execution_count": 384,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7068,7 +7063,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 349,
+   "execution_count": 385,
    "metadata": {
     "collapsed": false
    },
@@ -7087,7 +7082,7 @@
        "Name: floor, dtype: float64"
       ]
      },
-     "execution_count": 349,
+     "execution_count": 385,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7098,7 +7093,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 350,
+   "execution_count": 386,
    "metadata": {
     "collapsed": false
    },
@@ -7114,7 +7109,7 @@
        "Name: build_year, dtype: int64"
       ]
      },
-     "execution_count": 350,
+     "execution_count": 386,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7125,7 +7120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 351,
+   "execution_count": 387,
    "metadata": {
     "collapsed": false
    },
@@ -7141,7 +7136,7 @@
        "Name: build_year, dtype: int64"
       ]
      },
-     "execution_count": 351,
+     "execution_count": 387,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7152,7 +7147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 352,
+   "execution_count": 388,
    "metadata": {
     "collapsed": false
    },
@@ -7171,7 +7166,7 @@
        "Name: build_year, dtype: float64"
       ]
      },
-     "execution_count": 352,
+     "execution_count": 388,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7182,7 +7177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 353,
+   "execution_count": 389,
    "metadata": {
     "collapsed": false
    },
@@ -7201,7 +7196,7 @@
        "Name: build_year, dtype: float64"
       ]
      },
-     "execution_count": 353,
+     "execution_count": 389,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7212,7 +7207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 354,
+   "execution_count": 390,
    "metadata": {
     "collapsed": false
    },
@@ -7228,7 +7223,7 @@
        "Name: state, dtype: int64"
       ]
      },
-     "execution_count": 354,
+     "execution_count": 390,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7239,7 +7234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 355,
+   "execution_count": 391,
    "metadata": {
     "collapsed": false
    },
@@ -7258,7 +7253,7 @@
        "Name: max_floor, dtype: float64"
       ]
      },
-     "execution_count": 355,
+     "execution_count": 391,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7269,7 +7264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 356,
+   "execution_count": 392,
    "metadata": {
     "collapsed": false
    },
@@ -7288,7 +7283,7 @@
        "Name: max_floor, dtype: float64"
       ]
      },
-     "execution_count": 356,
+     "execution_count": 392,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7299,7 +7294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 327,
+   "execution_count": 393,
    "metadata": {
     "collapsed": false
    },
@@ -7310,7 +7305,7 @@
        "0"
       ]
      },
-     "execution_count": 327,
+     "execution_count": 393,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7321,7 +7316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 328,
+   "execution_count": 394,
    "metadata": {
     "collapsed": true
    },
@@ -7330,6 +7325,15 @@
     "train.to_csv(\"data/train_clean.csv\")\n",
     "test.to_csv(\"data/test_clean.csv\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
