Add threading/queing example for TensorFlow.

--- a/TensorFlow/Keras vs. TensorFlow.ipynb
+++ b/TensorFlow/Keras vs. TensorFlow.ipynb
@@ -1598,6 +1598,7 @@
     "model.add(MaxPooling2D(pool_size=(2, 2), padding=\"same\"))\n",
     "model.add(Flatten())\n",
     "model.add(Dense(1024, activation=\"relu\"))\n",
+    "model.add(Dropout(0.5))\n",
     "model.add(Dense(10, activation=\"softmax\"))\n",
     "\n",
     "model.compile(loss=\"categorical_crossentropy\", optimizer=\"sgd\")\n",
